--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,14 +3,17 @@
   <head>
     <meta charset="UTF-8">
     <title>hotman's homepage</title>
-    <link rel="stylesheet" href="./libs/styles/tomorrow-night-eighties.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/tomorrow-night-eighties.min.css">
     <link rel="stylesheet" href="./style.css">
-    <script src="./libs/highlight.pack.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
     <script src="./script.js"></script>
   </head>
   <body>
-    <pre><code class="c++">
+    <a href="http://judge.u-aizu.ac.jp/onlinejudge/description.jsp?id=ALDS1_4_B">二分探索</a>
+    <a href="javascript:void(0);" onclick="disp('./code/segment-1.cpp',1);">解答1</a><br />
+    <a href="javascript:void(0);" onclick="_close(1);">閉じる</a><br />
+    <pre><code id="code1" class="cpp">
     </code></pre>
   </body>
 </html>
