--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <title>hotman's homepage</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/styles/tomorrow-night-eighties.min.css">
+    <link rel="stylesheet" href="{{site.github.url}}/style.css">
     <link rel="stylesheet" href="./style.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.10/highlight.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+    <script src="{{site.github.url}}/script.js"></script>
     <script src="./script.js"></script>
   </head>
   <body>
