--- a/style.css
+++ b/style.css
@@ -12,3 +12,18 @@ code {
     font-size: 16px;
     border-radius: 10px;/*角の丸み*/
 }
+a{
+    padding: 0 10px;
+    color:#008080;
+    text-decoration: none;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0) 50%, rgb(49, 170, 226) 50%);
+    background-position: 0 0;
+    background-size: 200% auto;
+    transition: .3s;
+  }
+  
+  a:hover{
+    background-position: -100% 0;
+    color: #fff;
+  }
+  
